test/response-compress/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: response-compress-test
  namespace: backend
  labels:
    app: response-compress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: response-compress-test
  template:
    metadata:
      labels:
        app: response-compress-test
    spec:
      containers:
        - name: response-compress-test
          image: duyle95/response-compress-test:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
