test/response-compress/k8s/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: response-compress-test
  namespace: backend
  annotations:
    "app.kubernetes.io/managed-by": "helm"
    "meta.helm.sh/release-name": "response-compress-test"

spec:
  parentRefs:
    - name: eg
      namespace: api-gateway
  hostnames:
    - "example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: response-compress-test
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /response-compress-test
      timeouts: # <-- Timeout configurations
        request: 120s # Max duration for a request
        backendRequest: 120s # Timeout for backend response
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
